--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,13 +21,19 @@
 
 @font-face {
   font-family: "modam";
+  font-weight: 200;
+  src: url(/fonts/ModamFaNumWeb-Light.woff) format("woff"),
+    url(/fonts/ModamFaNumWeb-Light.woff2) format("woff2");
+}
+@font-face {
+  font-family: "modam";
   font-weight: 400;
   src: url(/fonts/ModamFaNumWeb-Medium.woff) format("woff"),
     url(/fonts/ModamFaNumWeb-Medium.woff2) format("woff2");
 }
 
 @font-face {
-  font-family: "modam-bold" !important;
+  font-family: "modam";
   font-weight: 800;
   src: url(/fonts/ModamFaNumWeb-Black.woff) format("woff"),
     url(/fonts/ModamFaNumWeb-Black.woff2) format("woff2");
@@ -36,7 +42,7 @@
 
 
 @font-face {
-  font-family: "modam-semmi";
+  font-family: "modam";
   font-weight: 600;
   src: url(/fonts/ModamFaNumWeb-SemiBold.woff) format("woff"),
     url(/fonts/ModamFaNumWeb-SemiBold.woff2) format("woff2");
@@ -44,5 +50,6 @@
 
 * {
   font-family: 'modam' !important;
+  text-decoration: none !important;
   
 }
